<resources>
    <string name="app_name">DogOwnerApp</string>
    <string name="title_health">Health</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_dog">Добавить собаку</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dog_name">Кличка:</string>
    <string name="breed">Порода:</string>
    <string name="gender">Пол:</string>
    <string name="weight">Вес:</string>
    <string name="vaccines">Прививки:</string>
    <string name="treatments">Обработки:</string>
    <string name="castration">Кастрация</string>
    <string name="birth_date">Дата рождения</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Привет!</string>
    <string name="welcome_register">Еще нет аккаунта? Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="welcome_login">Уже есть аккаунт? Войти</string>
    <string name="register">Зарегистрироваться</string>
</resources>