<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.AuthActivity">

    <EditText
        android:id="@+id/nameEdText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="52dp"
        android:ems="12"
        android:inputType="text"
        android:hint="Имя"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTextView" />

    <EditText
        android:id="@+id/emailEdText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="12"
        android:hint="Email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/nameEdText"
        app:layout_constraintStart_toStartOf="@+id/nameEdText"
        app:layout_constraintTop_toBottomOf="@+id/nameEdText" />

    <EditText
        android:id="@+id/passwordEdText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="12"
        android:hint="Введите пароль"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailEdText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailEdText"
        app:layout_constraintTop_toBottomOf="@+id/emailEdText" />

    <EditText
        android:id="@+id/repeatPasswordEdText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="12"
        android:hint="Повторите пароль"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/passwordEdText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordEdText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdText" />

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordEdText" />

    <TextView
        android:id="@+id/register_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/welcome_login"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>