<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.health.EditDogFragment">

    <EditText
        android:id="@+id/nameEdText2"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/nameTextView"
        app:layout_constraintVertical_bias="0.51" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="155dp"
        android:layout_marginTop="16dp"
        android:contentDescription="TODO"
        android:src="@drawable/dog1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/genderTextView"
        style="@style/editDogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/birthDateTextView"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="@+id/birthDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/birthDateTextView"
        tools:text="@string/gender" />

    <TextView
        android:id="@+id/weightTextView"
        style="@style/editDogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/genderTextView"
        tools:text="TextView" />

    <TextView
        android:id="@+id/castrationTextView"
        style="@style/editDogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/weightTextView"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView"
        tools:text="@string/castration" />

    <TextView
        android:id="@+id/vaccineTextView"
        style="@style/editDogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/castrationTextView"
        app:layout_constraintTop_toBottomOf="@+id/castrationTextView"
        tools:text="TextView" />

    <TextView
        android:id="@+id/treatmentTextView"
        style="@style/editDogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vaccineTextView"
        app:layout_constraintTop_toBottomOf="@+id/vaccineTextView"
        tools:text="TextView" />

    <EditText
        android:id="@+id/breedEdText"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/breedTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameEdText2"
        app:layout_constraintTop_toTopOf="@+id/breedTextView"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/nameTextView"
        style="@style/editDogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/dog_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="106dp" />

    <TextView
        android:id="@+id/breedTextView"
        style="@style/editDogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/breed"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/birthDateTextView"
        style="@style/editDogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        app:layout_constraintEnd_toEndOf="@+id/breedTextView"
        app:layout_constraintStart_toStartOf="@+id/breedTextView"
        app:layout_constraintTop_toBottomOf="@+id/breedTextView" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/birthDateTextView"
        app:layout_constraintEnd_toEndOf="@+id/breedEdText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/breedEdText"
        app:layout_constraintTop_toTopOf="@+id/birthDateTextView"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </RadioGroup>

    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Мужской"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Женский"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioMale"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/radioMale" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/castrationTextView"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber"
        app:layout_constraintTop_toTopOf="@+id/castrationTextView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>